--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -17,7 +17,7 @@ embassy-time        = "0.3.0"
 embassy-time-driver = { version = "0.1.0", optional = true }
 embedded-graphics   = "0.8.1"
 embedded-hal        = "1.0.0"
-embedded-hal-02     = { version = "0.2.7", package = "embedded-hal" }
+embedded-hal-02     = { version = "0.2.7", package = "embedded-hal", features = ["unproven"] }
 embedded-hal-async  = "1.0.0"
 embedded-hal-bus    = "0.1.0"
 embedded-io-async   = "0.6.1"
@@ -52,7 +52,8 @@ esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "e
 
 async = ["esp-hal/async"]
 
-eh1 = ["esp-hal/eh1"]
+embedded-hal-02 = ["esp-hal/embedded-hal-02"]
+embedded-hal = ["esp-hal/embedded-hal"]
 
 embassy = ["esp-hal/embassy"]
 
