--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -17,7 +17,7 @@ jobs:
           ldproxy: false
 
       - name: Build documentation
-        run: ./.github/scripts/build_docs.sh
+        run: cargo xtask build-documentation esp-hal
 
       # https://github.com/actions/deploy-pages/issues/303#issuecomment-1951207879
       - name: Remove problematic '.lock' files
