--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -5,13 +5,15 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyhow     = "1.0.79"
+anyhow     = "1.0.81"
+basic-toml = "0.1.9"
 chrono     = "0.4.35"
-clap       = { version = "4.5.0",  features = ["derive"] }
+clap       = { version = "4.5.2",  features = ["derive"] }
 csv        = "1.3.0"
-env_logger = "0.11.1"
-log        = "0.4.20"
-semver     = "1.0.21"
+env_logger = "0.11.3"
+log        = "0.4.21"
+minijinja  = "1.0.12"
+semver     = { version = "1.0.22",  features = ["serde"] }
 serde      = { version = "1.0.197", features = ["derive"] }
-strum      = { version = "0.26.1", features = ["derive"] }
-toml_edit  = "0.22.5"
+strum      = { version = "0.26.2",  features = ["derive"] }
+toml_edit  = "0.22.7"
