--- a/hil-test/.cargo/config.toml
+++ b/hil-test/.cargo/config.toml
@@ -2,15 +2,18 @@
 DEFMT_LOG="debug"
 
 [target.'cfg(target_arch = "riscv32")']
-runner    = "probe-rs test  --"
+runner    = "probe-rs run"
 rustflags = [
     "-C", "link-arg=-Tlinkall.x",
     "-C", "link-arg=-Tdefmt.x",
+    "-C", "link-arg=-Tembedded-test.x",
+    # "-C", "force-frame-pointers",
+
 ]
 
 [target.'cfg(target_arch = "xtensa")']
 # TODO: Xtensa not yet fully supported by `probe-rs`
-runner    = "probe-rs test --"
+runner    = "probe-rs run"
 rustflags = [
     "-C", "link-arg=-nostartfiles",
     "-C", "link-arg=-Wl,-Tlinkall.x",
