feat: Remove lib

--- a/hil-test/.cargo/config.toml
+++ b/hil-test/.cargo/config.toml
@@ -1,14 +1,13 @@
 [env]
-DEFMT_LOG="debug"
+DEFMT_LOG="info"
+RUST_LOG = "warn"
 
 [target.'cfg(target_arch = "riscv32")']
 runner    = "probe-rs run"
 rustflags = [
     "-C", "link-arg=-Tlinkall.x",
-    "-C", "link-arg=-Tdefmt.x",
     "-C", "link-arg=-Tembedded-test.x",
-    # "-C", "force-frame-pointers",
-
+    "-C", "link-arg=-Tdefmt.x", # Comment this line when using log feature
 ]
 
 [target.'cfg(target_arch = "xtensa")']
@@ -18,4 +17,6 @@ rustflags = [
     "-C", "link-arg=-nostartfiles",
     "-C", "link-arg=-Wl,-Tlinkall.x",
     "-C", "link-arg=-Tdefmt.x",
+    "-C", "link-arg=-Tembedded-test.x",
+
 ]
