--- a/.github/workflows/hil.yml
+++ b/.github/workflows/hil.yml
@@ -3,14 +3,21 @@ name: HIL
 on:
   merge_group:
   workflow_dispatch:
-  # FIXME: Remove before merging?
-  push:
-
+    inputs:
+      repository:
+        description: "Owner and repository to test"
+        required: true
+        default: 'esp-rs/esp-hal'
+      branch:
+        description: "Branch, tag or SHA to checkout."
+        required: true
+        default: "main"
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  # Test RISC-V targets:
   riscv-hil:
     name: HIL Test | ${{ matrix.target.soc }}
     runs-on:
@@ -33,8 +40,13 @@ jobs:
             rust-target: riscv32imac-unknown-none-elf
     steps:
       - uses: actions/checkout@v4
+        if: github.event_name != 'workflow_dispatch'
+
+      - uses: actions/checkout@v4
+        if: github.event_name == 'workflow_dispatch'
         with:
-          ref: 'feat/hil-testing'
+          repository: ${{ github.event.inputs.repository }}
+          ref: ${{ github.event.inputs.branch }}
 
       - uses: dtolnay/rust-toolchain@v1
         with:
