--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -21,10 +21,9 @@ name    = "uart"
 harness = false
 
 [dependencies]
-defmt = { version = "0.3.5", optional = true }
-defmt-rtt = { version = "0.4.0", optional = true }
-log = { version = "0.4.20", optional = true }
-esp-hal = { path = "../esp-hal", features = ["eh1"], optional = true }
+defmt = { version = "0.3.5" }
+defmt-rtt = { version = "0.4.0" }
+esp-hal = { path = "../esp-hal", features = ["eh1", "defmt"], optional = true }
 embedded-hal       = { version = "0.2.7", features = ["unproven"] }
 embedded-hal-async = { version = "1.0.0", optional = true }
 embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
@@ -32,10 +31,10 @@ embassy-executor = { default-features = false, version = "0.5.0", features = ["e
 semihosting = "0.1.6"
 
 [dev-dependencies]
+# Add the `embedded-test/defmt` feature for more verbose testing
 embedded-test = {git = "https://github.com/probe-rs/embedded-test/", branch = "next"}
 
 [features]
-default = ["defmt"]
 # Device support (required!):
 esp32   = ["esp-hal/esp32"]
 esp32c2 = ["esp-hal/esp32c2"]
@@ -52,13 +51,6 @@ embassy-executor-thread    = ["esp-hal?/embassy-executor-thread"]
 embassy-time-systick-16mhz = ["esp-hal?/embassy-time-systick-16mhz"]
 embassy-time-systick-80mhz = ["esp-hal?/embassy-time-systick-80mhz"]
 embassy-time-timg0   = ["esp-hal?/embassy-time-timg0"]
-# Loggging:
-# Adding log feature of embedded test to defmt or log makes the testing more verbose
-# log = ["dep:log", "embedded-test/log", "embedded-test/init-log"]
-# defmt = ["dep:defmt", "dep:defmt-rtt", "embedded-test/defmt"]
-log = ["dep:log", "embedded-test/init-log", "esp-hal?/log"]
-# Using defmt crate requires editting `.cargo/config.toml`rustflags.
-defmt = ["dep:defmt", "dep:defmt-rtt", "esp-hal?/defmt"]
 
 # cargo build/run
 [profile.dev]
