--- a/.github/workflows/hil.yml
+++ b/.github/workflows/hil.yml
@@ -22,9 +22,6 @@ jobs:
     name: HIL Test | ${{ matrix.target.soc }}
     runs-on:
       labels: [self-hosted, "${{ matrix.target.runner }}"]
-    env:
-      PROBE_RS_CHIP: ${{ matrix.target.soc }}
-      CARGO_BUILD_TARGET: ${{ matrix.target.rust-target }}
     strategy:
       fail-fast: false
       matrix:
@@ -50,13 +47,13 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@v1
         with:
-          target: ${{ env.CARGO_BUILD_TARGET }}
+          target: ${{ matrix.target.rust-target }}
           toolchain: nightly
+          components: rust-src
 
       - name: Run tests
-        run: |
-          cd hil-test/
-          cargo test --release --features=${{ matrix.target.soc }}
+        working-directory: hil-test
+        run: cargo ${{ matrix.target.soc }}
 
   # Test Xtensa targets:
   # TODO: Add jobs for Xtensa once supported by `probe-rs`
