--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,14 @@ on:
     paths-ignore:
       - "**/CHANGELOG.md"
       - "**/README.md"
+      - "**/hil-test/**"
   push:
     branches-ignore:
       - "gh-readonly-queue/**"
     paths-ignore:
       - "**/CHANGELOG.md"
       - "**/README.md"
+      - "**/hil-test/**"
   merge_group:
   workflow_dispatch:
 
