--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -53,41 +53,25 @@ embassy-time-systick-16mhz = ["esp-hal?/embassy-time-systick-16mhz"]
 embassy-time-systick-80mhz = ["esp-hal?/embassy-time-systick-80mhz"]
 embassy-time-timg0   = ["esp-hal?/embassy-time-timg0"]
 
-# cargo build/run
+# https://doc.rust-lang.org/cargo/reference/profiles.html#test
+# Test and bench profiles inherit from dev and release respectively.
+
 [profile.dev]
 codegen-units    = 1
 debug            = 2
-debug-assertions = true  # <-
+debug-assertions = true
 incremental      = false
-opt-level        = 'z'   # <-
-overflow-checks  = true  # <-
+opt-level        = 'z'
+overflow-checks  = true
 
-# cargo test
-[profile.test]
-codegen-units    = 1
-debug            = 2
-debug-assertions = true  # <-
-incremental      = false
-opt-level        = 3     # <-
-overflow-checks  = true  # <-
-
-# cargo build/run --release
 [profile.release]
 codegen-units    = 1
 debug            = 2
-debug-assertions = false # <-
+debug-assertions = false
 incremental      = false
-opt-level        = 3     # <-
-overflow-checks  = false # <-
-
-# cargo test --release
-[profile.bench]
-codegen-units    = 1
-debug            = 2
-debug-assertions = false # <-
-incremental      = false
-opt-level        = 3     # <-
-overflow-checks  = false # <-
+opt-level        = 3
+lto = 'fat'
+overflow-checks  = false
 
 [patch.crates-io]
 semihosting = { git = "https://github.com/taiki-e/semihosting", rev = "c829c19" }
