--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -20,6 +20,11 @@ harness = false
 name    = "uart"
 harness = false
 
+[[test]]
+name    = "uart_async"
+harness = false
+required-features = ["embassy", "async"]
+
 [dependencies]
 defmt = { version = "0.3.5" }
 defmt-rtt = { version = "0.4.0" }
@@ -28,12 +33,12 @@ embedded-hal-02       = { version = "0.2.7", package = "embedded-hal", features 
 embedded-hal-async = { version = "1.0.0", optional = true }
 embedded-hal     = { version = "1.0.0" }
 embedded-hal-nb      = { version = "1.0.0", optional = true }
-embassy-executor = { default-features = false, version = "0.5.0", features = ["executor-thread", "arch-riscv32"], optional = true }
 semihosting = "0.1.6"
 
 [dev-dependencies]
 # Add the `embedded-test/defmt` feature for more verbose testing
-embedded-test = {git = "https://github.com/probe-rs/embedded-test", rev = "8e3f925"}
+embassy-executor = { default-features = false, version = "0.5.0", features = ["executor-thread", "arch-riscv32"] }
+embedded-test = {git = "https://github.com/probe-rs/embedded-test", rev = "8e3f925" }
 
 [features]
 # Device support (required!):
@@ -46,7 +51,7 @@ esp32s2 = ["esp-hal/esp32s2"]
 esp32s3 = ["esp-hal/esp32s3"]
 # Async & Embassy:
 async = ["dep:embedded-hal-async", "esp-hal?/async"]
-embassy = ["esp-hal?/embassy", "embedded-test/embassy", "dep:embassy-executor"]
+embassy = ["esp-hal?/embassy", "embedded-test/embassy"]
 embassy-executor-interrupt = ["esp-hal?/embassy-executor-interrupt"]
 embassy-executor-thread    = ["esp-hal?/embassy-executor-thread"]
 embassy-time-systick-16mhz = ["esp-hal?/embassy-time-systick-16mhz"]
