--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -307,7 +307,7 @@ jobs:
       - name: rustfmt (examples)
         run: cargo fmt --all --manifest-path=examples/Cargo.toml -- --check
 
-  riscv-hil:
+  hil:
     name: HIL Test | ${{ matrix.soc }}
     runs-on: ubuntu-latest
 
