--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -314,7 +314,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        soc: [esp32c3, esp32c6, esp32h2]
+        soc: [esp32c3, esp32c6, esp32h2, esp32s3]
 
     steps:
       - uses: actions/checkout@v4
