--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -35,6 +35,7 @@ embedded-hal-async = { version = "1.0.0", optional = true }
 embedded-hal-nb    = { version = "1.0.0", optional = true }
 esp-hal            = { path = "../esp-hal", features = ["defmt", "embedded-hal", "embedded-hal-02"], optional = true }
 semihosting        = { git = "https://github.com/taiki-e/semihosting", rev = "c829c19" }
+critical-section   = { version = "1.1.2" }
 
 [dev-dependencies]
 embassy-executor   = { version = "0.5.0", default-features = false, features = ["executor-thread", "arch-riscv32"] }
