Add test to ensure the some edge case pins can be used in async mode

--- a/hil-test/.cargo/config.toml
+++ b/hil-test/.cargo/config.toml
@@ -14,6 +14,7 @@ rustflags = [
     "-C", "link-arg=-Tlinkall.x",
     "-C", "link-arg=-Tembedded-test.x",
     "-C", "link-arg=-Tdefmt.x",
+    "-C", "force-frame-pointers"
 ]
 
 [target.'cfg(target_arch = "xtensa")']
