update for changes in latest esp-hal git (#449)

--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -27,6 +27,7 @@ esp-hal = { workspace = true }
 smoltcp = { workspace = true, optional = true }
 critical-section.workspace = true
 log = { workspace = true, optional = true }
+embedded-hal = { workspace = true }
 embedded-svc = { workspace = true, optional = true }
 enumset = { workspace = true, optional = true }
 linked_list_allocator = { workspace = true }
