--- a/hil-test/.cargo/config.toml
+++ b/hil-test/.cargo/config.toml
@@ -14,6 +14,7 @@ rustflags = [
     "-C", "link-arg=-Tlinkall.x",
     "-C", "link-arg=-Tembedded-test.x",
     "-C", "link-arg=-Tdefmt.x",
+    "-C", "force-frame-pointers"
 ]
 
 [target.'cfg(target_arch = "xtensa")']
@@ -24,6 +25,9 @@ rustflags = [
     "-C", "link-arg=-Tdefmt.x",
     "-C", "link-arg=-Tembedded-test.x",
 ]
+
+[env]
+DEFMT_LOG = "info"
 
 [unstable]
 build-std = ["core"]
