check hil tests build in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -307,14 +307,6 @@ jobs:
       - name: rustfmt (examples)
         run: cargo fmt --all --manifest-path=examples/Cargo.toml -- --check
 
-  # --------------------------------------------------------------------------
-  # NOTE:
-  #
-  # This is (hopefully) a temporary workaround to allow us to run HIL tests
-  # in merge queue, but not in pull requests. For more information see:
-  #
-  # https://github.com/esp-rs/esp-hal/issues/1328
-
   riscv-hil:
     name: HIL Test | ${{ matrix.soc }}
     runs-on: ubuntu-latest
@@ -325,4 +317,11 @@ jobs:
         soc: [esp32c3, esp32c6, esp32h2]
 
     steps:
-      - run: echo "HIL tests are not run in pull requests!"
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@v1
+        with:
+          target: riscv32imc-unknown-none-elf,riscv32imac-unknown-none-elf,riscv32imafc-unknown-none-elf
+          toolchain: nightly
+          components: rust-src
+      - uses: Swatinem/rust-cache@v2
+      - run: cargo xtask build-examples hil-test ${{ matrix.soc }}
